--- a/about.html
+++ b/about.html
@@ -57,56 +57,61 @@
         </div>
     </div>
     <!-- Overview -->
-    <div class="flex bg-white justify-between space-x-[160px] px-[96px] mb-[96px] animate__animated animate__fadeIn">
+    <div class="flex bg-white justify-between space-x-[144px] px-[96px] mb-[96px] animate__animated animate__fadeIn">
         <div>
-            <p class="text-[32px] PF-sm">Past</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">UX/UI设计师，就职于迈越。</p>
+            <p class="text-[32px] PF-sm pb-[12px]">Past</p>
+            <img class="w-[120px] h-[120px]" src="media/gafa_logo.png">
+            <p class="pt-[12px] text-[24px] PF-r text-black/60">工业设计学士，毕业于广州美术学院。</p>
         </div>
         <div>
             <p class="text-[32px] PF-sm">Current</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">产品体验设计实习生，就职于微信。</p>
+            <div class="flex pt-[12px] space-x-[12px]">
+            <img class="w-[120px] h-[120px]" src="media/tencent_logo.png">
+            <img class="w-[120px] h-[120px]" src="media/weixin_logo.png">
+            </div>
+            <p class="pt-[12px] text-[24px] PF-r text-black/60">产品体验设计实习生，就职于腾讯微信事业群。</p>
         </div>
         <div>
-            <p class="text-[32px] PF-sm">Soon</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">智能系统设计硕士，就读于香港理工大学。</p>
+            <p class="text-[32px] PF-sm pb-[12px]">Soon</p>
+                        <img class="w-[120px] h-[120px]" src="media/polyu_logo.png">
+            <p class="pt-[12px] text-[24px] PF-r text-black/60">智能系统设计硕士，就读于香港理工大学。</p>
         </div>
     </div>
 
     <!-- Content -->
     <div class="mt-[120px] px-[96px] flex">
         <div class="flex w-2/5">
-            <p class="PF-sm text-black text-[56px]">Self-introduction</p>
+            <p class="PF-sm text-black text-[56px]">自我介绍</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <div class="flex space-x-[16px] items-center">
-                <a
-                    class="cursor-not-allowed PF-sm text-black text-[32px] hover:underline">Click here to download my resume.<br>
+                <a class="cursor-not-allowed PF-sm text-black text-[32px] hover:underline">Click here to download my
+                    resume.<br>
                     单击此处下载简历。</a>
             </div>
-            <p class="PF-r text-black/60 text-[24px]">I'm Zha Chengke (查成柯), you can also call me Zack. I am a UX/UI
-                designer, graduated from Guangzhou Academy of Fine Arts with a bachelor's degree, and am studying at the
-                Hong Kong Polytechnic University with a master's degree. I have 1 year of full-time UX/UI work
-                experience, 1 year of interaction/experience/user research internship project experience, covering many
-                business areas such as overseas social products, AIGC products, smart home (IoT), education products,
-                experience consulting, and B-end products.</p>
+            <p class="PF-r text-black/60 text-[24px]">
+                Hi，我是查成柯（Zack），一名产品体验设计师，本科毕业于广州美术学院，现于香港理工大学攻读硕士。
+                我拥有 1 年全职 UX/UI 设计经验，以及 4 段涵盖交互设计、用户体验与用户研究的项目与实习经历，曾参与电商、社交、AIGC、智能家居（IoT）等多领域产品的设计与优化。
+            </p>
         </div>
     </div>
     <div class="mt-[96px] px-[96px] flex">
         <div class="flex w-2/5">
-            <p class="PF-sm text-black text-[56px]">More works</p>
+            <p class="PF-sm text-black text-[56px]">设计之外</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <div class="flex space-x-[16px] items-center">
-                <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed" target="_blank"
-                    class="PF-sm text-black text-[32px] hover:underline">Click here to view more works.<br>
+                <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed"
+                    target="_blank" class="PF-sm text-black text-[32px] hover:underline">Click here to view more
+                    works.<br>
                     单击此处浏览更多作品。</a>
             </div>
-            <p class="PF-r text-black/60 text-[24px]">In addition to the UX/UI projects shown in the webpage, I have a much wider range of work covering technology, design, and other areas, including HCI, AR development, EEG technology, and more. You can click the link above to download the PDF to see more.</p>
+            <p class="PF-r text-black/60 text-[24px]">除网页中所展示的UX/UI设计外，我对新兴技术也保持着相当的热情。例如AIGC、增强现实 (AR) 开发、脑电图 (EEG) 技术等。您可以点击上方链接以查看更多内容。</p>
         </div>
     </div>
     <div class="mt-[96px] px-[96px] flex">
         <div class="flex w-2/5">
-            <p class="PF-sm text-black text-[56px]">I'm listening to...</p>
+            <p class="PF-sm text-black text-[56px]">我最爱的专辑 🎵</p>
         </div>
         <div class="flex w-3/5 my-[24px]">
             <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/album.png">
@@ -114,7 +119,7 @@
     </div>
     <div class="mt-[96px] px-[96px] flex">
         <div class="flex w-2/5">
-            <p class="PF-sm text-black text-[56px]">I'm watching...</p>
+            <p class="PF-sm text-black text-[56px]">我最爱的漫画 📕</p>
         </div>
         <div class="flex w-3/5 my-[24px]">
             <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/anime.png">
