--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="font.css">
 </head>
 
-<body>
+<body class="min-w-[1440px]">
   <!-- Navbar -->
   <div class="bg-[#F6FAFD]">
-    <nav class="flex justify-between w-full px-16 py-10 z-30 animate__animated animate__fadeInDown absolute">
+    <nav class="flex justify-between min-w-[1440px] w-full px-16 py-10 z-30 animate__animated animate__fadeInDown absolute">
       <div class="flex justify-normal w-1/3 space-x-8">
         <a href="#works"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
@@ -41,7 +41,7 @@
   <!-- Hero Section -->
   <div>
     <div class="z-0 animate__animated animate__fadeIn ">
-      <video class="w-screen" autoplay loop muted playsinline style="mix-blend-mode: darken;">
+      <video class="min-w-[1440px] w-screen" autoplay loop muted playsinline style="mix-blend-mode: darken;">
         <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/new_bg.webm">
       </video>
     </div>
@@ -110,7 +110,7 @@
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="https://medium.com/@alstonchvita/因爲糟糕的用戶體驗-我重新設計了這款ai占卜產品-quin-cac9bf025dd4" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_cover.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_cover.jpg">
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_logo.png">
@@ -126,7 +126,7 @@
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
           <a href="super.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.jpg">
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_midea.png">
@@ -156,7 +156,7 @@
           class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
           <a href="xmind.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_card_Xmind.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_card_Xmind.jpg">
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/xmind/xmind_logo_44.png">
