--- a/super.html
+++ b/super.html
@@ -76,7 +76,7 @@
     </div>
     <div>
         <img class="w-full animate__animated animate__fadeIn"
-            src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/midea_content_cover.png">
+            src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/midea_top_cover.png">
     </div>
 
     <!-- Content -->
@@ -85,13 +85,10 @@
             <p class="PF-sm text-black text-[72px]">Brief</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
-            <p class="PF-sm text-black text-[32px]">SUPER is a model that includes five dimensions and is specifically
-                designed to measure the user experience of smart home products.</p>
-            <p class="PF-r text-black/60 text-[24px]">The smart home field uses the SUPER model to build a UX metrics
-                model from five metrics: Satisfaction, Usability, Performance, Engagement, and Relevant. According to
-                the path of smart home use, IoT user characteristics, the level of experience in the Meiju APP
-                to filter out the core indicators at all levels, and establish the appropriate UX model, and finally
-                output the user experience report, and once again feedback to the design team, to form a virtuous cycle.
+            <p class="PF-sm text-black text-[32px]">
+                SUPER，一个专门用于衡量智能家居产品体验的UX度量模型。</p>
+            <p class="PF-r text-black/60 text-[24px]">
+                智能家居领域使用SUPER模型，从Satisfaction（满意度）、Usability（易用性）、Performance（性能）、Engagement（参与度）、Relevant（吸引度）5个度量指标来建立UX度量模型。根据智能家居使用路径、IoT用户特性、美居体验水平筛选出各个层次的核心指标，并建立适配的UX模型，最后输出用户体验报告，并再次反馈给设计团队，形成良性循环。
             </p>
         </div>
     </div>
@@ -107,11 +104,7 @@
                     video.<br>
                     单击此处观看项目介绍视频。</a>
             </div>
-            <p class="PF-r text-black/60 text-[24px]">This presentation introduces the content and construction process
-                of the user experience metric model "SUPER". On the one hand, it can guide product managers and
-                designers in IoT field to carry out scientific experience metrics and product optimization. On the other
-                hand, designers in other industries can also learn from the model construction process to build a metric
-                model that meets their own business characteristics.</p>
+            <p class="PF-r text-black/60 text-[24px]">以上视频分享了用户体验度量模型“SUPER”的内容与构建方法过程。一方面能指导IoT领域的产品经理与设计师进行科学的体验度量与产品优化。另一方面，其他行业的设计师也可以借鉴模型的建设过程构建符合自身业务特性的度量模型。</p>
         </div>
     </div>
     <div class="my-[96px] px-[96px] flex">
@@ -119,44 +112,33 @@
             <p class="PF-sm text-black text-[72px]">My Contribution</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
-            <p class="PF-r text-black/60 text-[24px]">The work was very challenging, but that pushed me to learn more
-                than at any other internship.
+            <p class="PF-r text-black/60 text-[24px]">这项工作非常具有挑战性，它促使我比在任何其他实习中学到更多东西。
             </p>
             <div class="flex-col space-y-[24px]">
                 <div
                     class="flex-row space-y-[16px] bg-[#DBFFCC] rounded-[32px] border border-[#4DFF00] px-[36px] py-[32px]">
                     <div class="flex flex-row items-center space-x-[16px]">
                         <img class="w-[40px] h-[40px]" src="media/midea/icon_40_search.png">
-                        <p class="text-[#0A2600] text-[32px] PF-sm">Model Research, Review, and Analysis</p>
+                        <p class="text-[#0A2600] text-[32px] PF-sm">模型研究、审查和分析</p>
                     </div>
-                    <p class="text-[#1A6600] text-[24px] PF-r">Analyze and deconstruct 8 user experience metric models
-                        such as NPS, HEART, PTECH, etc., sort out 24 dimensions and 248 indicators based on the home
-                        appliance usage scenarios, and filter and generate 44 coarse indicators through the Hierarchical
-                        Analysis Method and the K-J method, ultimately forming the SUPER, the first user experience
-                        metric model in the field of IoT, to drive the quantification of the experience of Midea's IoT
-                        product line.</p>
+                    <p class="text-[#1A6600] text-[24px] PF-r">分析解构NPS、HEART、PTECH等8个用户体验指标模型，结合家电使用场景梳理出24个维度、248个指标，并通过层次分析法、KJ法筛选生成44个粗指标，最终形成物联网领域首个用户体验指标模型SUPER，驱动美的物联网产品线体验的量化。</p>
                 </div>
                 <div
                     class="flex-row space-y-[16px] bg-[#DBFFCC] rounded-[32px] border border-[#4DFF00] px-[36px] py-[32px]">
                     <div class="flex flex-row items-center space-x-[16px]">
                         <img class="w-[40px] h-[40px]" src="media/midea/icon_40_interaction.png">
-                        <p class="text-[#0A2600] text-[32px] PF-sm">Interaction Walkthrough</p>
+                        <p class="text-[#0A2600] text-[32px] PF-sm">交互走查</p>
                     </div>
-                    <p class="text-[#1A6600] text-[24px] PF-r">Led 10+ interaction walkthroughs for MEIJU APP and home
-                        appliance service system, identified 30+ key experience issues using SUPER model, pushed up and
-                        optimized the model performance, and wrote about 5,000 words of usability walkthrough report.
+                    <p class="text-[#1A6600] text-[24px] PF-r">主导了美居APP及相关硬件10+次交互走查，运用SUPER模型识别出30+个关键体验问题，提升并优化了模型性能，撰写了约5000字的可用性排查报告。
                     </p>
                 </div>
                 <div
                     class="flex-row space-y-[16px] bg-[#DBFFCC] rounded-[32px] border border-[#4DFF00] px-[36px] py-[32px]">
                     <div class="flex flex-row items-center space-x-[16px]">
                         <img class="w-[40px] h-[40px]" src="media/midea/icon_40_interview.png">
-                        <p class="text-[#0A2600] text-[32px] PF-sm">Expert Interviews</p>
+                        <p class="text-[#0A2600] text-[32px] PF-sm">专家访谈</p>
                     </div>
-                    <p class="text-[#1A6600] text-[24px] PF-r">Organized and facilitated 4 expert interviews and user
-                        workshops, participated in writing interview scripts and research outlines, used NVivo to
-                        qualitatively analyze the corpus of interview results, and executed visualization and debriefing
-                        using Tableau, PPT, and other tools.
+                    <p class="text-[#1A6600] text-[24px] PF-r">组织并主持了4次专家访谈和用户研讨会，参与撰写访谈脚本和研究提纲，使用NVivo对访谈结果语料库进行定性分析，并使用Tableau等工具进行可视化分析。
                     </p>
                 </div>
             </div>
@@ -175,10 +157,7 @@
                     video.<br>
                     单击此处阅览项目过程。</a>
             </div>
-            <p class="PF-r text-black/60 text-[24px]">The project process included existing model research, interviews
-                with industry UX experts, interaction walk-throughs, model construction, and final validity confidence
-                analysis. You can learn more at the link above. If the link does not open correctly, please find my
-                email in the footer and contact me and I will send you the PDF file.</p>
+            <p class="PF-r text-black/60 text-[24px]">该项目流程包括现有模型调研、行业用户体验专家访谈、交互走查、模型构建以及最终效度置信度分析。您可以通过上方链接了解更多信息。如果链接无法正常打开，请在页脚找到我的邮箱地址并联系我，我会将PDF文件发送给您。</p>
         </div>
     </div>
 
